fix: grid on mobile version

--- a/src/scss/ui/contenido/_nosotros.scss
+++ b/src/scss/ui/contenido/_nosotros.scss
@@ -7,7 +7,9 @@
     @include m.heading;
   }
   &__grid {
-    @include m.grid(3, 2rem);
+    @include m.tablet {
+      @include m.grid(3, 2rem);
+    }
   }
 
   &__bloque {
